Fixed viewport height on mobile

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,6 +1,6 @@
 gridster {
     background: transparent;
-    height: 90vh;
+    height: 85vh;
 }
 
 gridster.scrollVertical::-webkit-scrollbar-track {
